--- a/Exam/Base.lproj/Main.storyboard
+++ b/Exam/Base.lproj/Main.storyboard
@@ -25,24 +25,33 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xxN-DX-T60">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="d1N-cU-Cvh">
+                                        <rect key="frame" x="0.0" y="0.0" width="416" height="31"/>
+                                        <connections>
+                                            <action selector="switchDidChange:" destination="Jy8-QG-It5" eventType="valueChanged" id="zkH-ei-1Cp"/>
+                                        </connections>
+                                    </switch>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Oij-MM-Mxk">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="518"/>
+                                        <rect key="frame" x="0.0" y="39" width="414" height="518"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="518" id="N4O-ai-bop"/>
                                         </constraints>
                                     </mapView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zTr-CP-ib2" customClass="WeatherCustomView" customModule="Exam" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="526" width="414" height="199"/>
+                                        <rect key="frame" x="0.0" y="565" width="414" height="160"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="d1N-cU-Cvh" firstAttribute="leading" secondItem="xxN-DX-T60" secondAttribute="leading" id="1Xf-Uf-yaj"/>
                                     <constraint firstAttribute="trailing" secondItem="zTr-CP-ib2" secondAttribute="trailing" id="6eO-cb-ARj"/>
                                     <constraint firstItem="zTr-CP-ib2" firstAttribute="leading" secondItem="xxN-DX-T60" secondAttribute="leading" id="8LX-wo-RkH"/>
                                     <constraint firstAttribute="bottom" secondItem="zTr-CP-ib2" secondAttribute="bottom" id="B3T-eL-lEM"/>
-                                    <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="xxN-DX-T60" secondAttribute="top" id="FyN-BG-g6f"/>
+                                    <constraint firstAttribute="trailing" secondItem="d1N-cU-Cvh" secondAttribute="trailing" id="CNj-UQ-rYq"/>
                                     <constraint firstItem="Oij-MM-Mxk" firstAttribute="leading" secondItem="xxN-DX-T60" secondAttribute="leading" id="KSi-6L-tvj"/>
                                     <constraint firstItem="zTr-CP-ib2" firstAttribute="top" secondItem="Oij-MM-Mxk" secondAttribute="bottom" constant="8" symbolic="YES" id="L3S-Lr-3vs"/>
+                                    <constraint firstItem="d1N-cU-Cvh" firstAttribute="top" secondItem="xxN-DX-T60" secondAttribute="top" id="Zds-XU-Ahn"/>
+                                    <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="d1N-cU-Cvh" secondAttribute="bottom" constant="8" symbolic="YES" id="cRk-fg-f96"/>
                                     <constraint firstAttribute="trailing" secondItem="Oij-MM-Mxk" secondAttribute="trailing" id="nIP-fs-zxm"/>
                                     <constraint firstItem="zTr-CP-ib2" firstAttribute="top" secondItem="Oij-MM-Mxk" secondAttribute="bottom" constant="8" symbolic="YES" id="xtS-27-d8n"/>
                                 </constraints>
@@ -82,6 +91,7 @@
                         <outlet property="latitudeLabel" destination="nwf-Ek-wTZ" id="TNe-TW-Tux"/>
                         <outlet property="longitudeLabel" destination="hiT-qQ-LDA" id="7lN-Gx-cho"/>
                         <outlet property="mapView" destination="Oij-MM-Mxk" id="kUZ-Y7-FyJ"/>
+                        <outlet property="switchToggle" destination="d1N-cU-Cvh" id="zRf-ZL-epO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XQK-jL-tjK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
