--- a/Exam/Base.lproj/Main.storyboard
+++ b/Exam/Base.lproj/Main.storyboard
@@ -19,81 +19,53 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTm-ad-3GR">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
-                                    <navigationItem title="Kart" id="hcC-Wb-cfg"/>
+                                    <navigationItem title="Kart" id="hcC-Wb-cfg">
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="pr0-Eq-gw9">
+                                            <switch key="customView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="center" id="d1N-cU-Cvh">
+                                                <rect key="frame" x="343" y="6.5" width="51" height="31"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <connections>
+                                                    <action selector="switchDidChange:" destination="Jy8-QG-It5" eventType="valueChanged" id="zkH-ei-1Cp"/>
+                                                </connections>
+                                            </switch>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xxN-DX-T60">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <subviews>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="left" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="d1N-cU-Cvh">
-                                        <rect key="frame" x="0.0" y="0.0" width="416" height="31"/>
-                                        <connections>
-                                            <action selector="switchDidChange:" destination="Jy8-QG-It5" eventType="valueChanged" id="zkH-ei-1Cp"/>
-                                        </connections>
-                                    </switch>
-                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Oij-MM-Mxk">
-                                        <rect key="frame" x="0.0" y="39" width="414" height="518"/>
-                                        <gestureRecognizers/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="518" id="N4O-ai-bop"/>
-                                        </constraints>
-                                        <connections>
-                                            <outletCollection property="gestureRecognizers" destination="UGR-vB-Za5" appends="YES" id="GUi-uB-tY9"/>
-                                        </connections>
-                                    </mapView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zTr-CP-ib2" customClass="WeatherCustomView" customModule="Exam" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="565" width="414" height="160"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="d1N-cU-Cvh" firstAttribute="leading" secondItem="xxN-DX-T60" secondAttribute="leading" id="1Xf-Uf-yaj"/>
-                                    <constraint firstAttribute="trailing" secondItem="zTr-CP-ib2" secondAttribute="trailing" id="6eO-cb-ARj"/>
-                                    <constraint firstItem="zTr-CP-ib2" firstAttribute="leading" secondItem="xxN-DX-T60" secondAttribute="leading" id="8LX-wo-RkH"/>
-                                    <constraint firstAttribute="bottom" secondItem="zTr-CP-ib2" secondAttribute="bottom" id="B3T-eL-lEM"/>
-                                    <constraint firstAttribute="trailing" secondItem="d1N-cU-Cvh" secondAttribute="trailing" id="CNj-UQ-rYq"/>
-                                    <constraint firstItem="Oij-MM-Mxk" firstAttribute="leading" secondItem="xxN-DX-T60" secondAttribute="leading" id="KSi-6L-tvj"/>
-                                    <constraint firstItem="zTr-CP-ib2" firstAttribute="top" secondItem="Oij-MM-Mxk" secondAttribute="bottom" constant="8" symbolic="YES" id="L3S-Lr-3vs"/>
-                                    <constraint firstItem="d1N-cU-Cvh" firstAttribute="top" secondItem="xxN-DX-T60" secondAttribute="top" id="Zds-XU-Ahn"/>
-                                    <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="d1N-cU-Cvh" secondAttribute="bottom" constant="8" symbolic="YES" id="cRk-fg-f96"/>
-                                    <constraint firstAttribute="trailing" secondItem="Oij-MM-Mxk" secondAttribute="trailing" id="nIP-fs-zxm"/>
-                                    <constraint firstItem="zTr-CP-ib2" firstAttribute="top" secondItem="Oij-MM-Mxk" secondAttribute="bottom" constant="8" symbolic="YES" id="xtS-27-d8n"/>
-                                </constraints>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nwf-Ek-wTZ">
-                                <rect key="frame" x="20" y="649" width="0.0" height="0.0"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <accessibility key="accessibilityConfiguration" identifier="latitudeLabel"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hiT-qQ-LDA">
-                                <rect key="frame" x="20" y="688" width="0.0" height="0.0"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <accessibility key="accessibilityConfiguration" identifier="longitudeLabel"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Oij-MM-Mxk">
+                                <rect key="frame" x="0.0" y="89" width="414" height="517"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="UGR-vB-Za5" appends="YES" id="GUi-uB-tY9"/>
+                                </connections>
+                            </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zTr-CP-ib2" customClass="WeatherCustomView" customModule="Exam" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="605" width="414" height="208"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mwe-aV-dkG"/>
                         <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
                         <constraints>
-                            <constraint firstItem="xxN-DX-T60" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="4De-sp-hTe"/>
-                            <constraint firstItem="eTm-ad-3GR" firstAttribute="top" secondItem="mwe-aV-dkG" secondAttribute="top" id="75t-ri-7Pd"/>
-                            <constraint firstItem="xxN-DX-T60" firstAttribute="bottom" secondItem="mwe-aV-dkG" secondAttribute="bottom" id="AH2-hF-g4A"/>
-                            <constraint firstItem="eTm-ad-3GR" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="IbN-9U-lUX"/>
-                            <constraint firstItem="xxN-DX-T60" firstAttribute="top" secondItem="eTm-ad-3GR" secondAttribute="bottom" id="ZVc-1X-wxY"/>
-                            <constraint firstItem="eTm-ad-3GR" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="byM-hh-gQv"/>
-                            <constraint firstItem="xxN-DX-T60" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="ehh-WO-gNf"/>
-                            <constraint firstItem="mwe-aV-dkG" firstAttribute="bottom" secondItem="eTm-ad-3GR" secondAttribute="bottom" constant="725" id="uyb-o1-Z5T"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="1M2-F9-hi6"/>
+                            <constraint firstItem="zTr-CP-ib2" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="4a2-sc-LI0"/>
+                            <constraint firstItem="eTm-ad-3GR" firstAttribute="top" secondItem="mwe-aV-dkG" secondAttribute="top" id="BuR-NC-pzh"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="trailing" secondItem="eTm-ad-3GR" secondAttribute="trailing" id="BwX-UM-aIi"/>
+                            <constraint firstItem="eTm-ad-3GR" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="F1e-Gr-haa"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="eTm-ad-3GR" secondAttribute="bottom" constant="1" id="LJo-kk-X5B"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.577009" id="NTH-6G-8J8"/>
+                            <constraint firstItem="eTm-ad-3GR" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="SHp-3j-JHH"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="eTm-ad-3GR" secondAttribute="bottom" constant="1" id="U6P-8N-rbw"/>
+                            <constraint firstItem="zTr-CP-ib2" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="XKt-Yl-HTm"/>
+                            <constraint firstItem="zTr-CP-ib2" firstAttribute="bottom" secondItem="mwe-aV-dkG" secondAttribute="bottom" id="bis-q4-m6y"/>
+                            <constraint firstItem="eTm-ad-3GR" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.0491071" id="hrx-va-uE8"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="mPL-bG-VTu"/>
+                            <constraint firstItem="zTr-CP-ib2" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.232143" id="vix-Mm-3Hr"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Kart" id="MVV-BL-1g1"/>
                     <connections>
-                        <outlet property="latitudeLabel" destination="nwf-Ek-wTZ" id="TNe-TW-Tux"/>
-                        <outlet property="longitudeLabel" destination="hiT-qQ-LDA" id="7lN-Gx-cho"/>
+                        <outlet property="customViewContainer" destination="zTr-CP-ib2" id="c8l-y0-xGp"/>
                         <outlet property="mapView" destination="Oij-MM-Mxk" id="kUZ-Y7-FyJ"/>
                         <outlet property="switchToggle" destination="d1N-cU-Cvh" id="zRf-ZL-epO"/>
                     </connections>
