--- a/Exam/WeatherCustomView.xib
+++ b/Exam/WeatherCustomView.xib
@@ -8,47 +8,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherCustomView" customModule="Exam" customModuleProvider="target">
-            <connections>
-                <outlet property="customView" destination="iN0-l3-epB" id="1Lc-at-iRR"/>
-                <outlet property="imageView" destination="LZk-gu-AsI" id="oBH-Wn-BYE"/>
-                <outlet property="latLabel" destination="d67-gD-dQZ" id="Uor-Ys-2Jp"/>
-                <outlet property="lonLabel" destination="io5-J3-UX5" id="jJi-wf-CrY"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherCustomView" customModule="Exam" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="WeatherCustomView" customModule="Exam" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Latitude:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4r-Qb-1SB">
-                    <rect key="frame" x="20" y="62" width="67" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Longitude:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBf-gd-uXq">
-                    <rect key="frame" x="20" y="123" width="81" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="lon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="io5-J3-UX5">
-                    <rect key="frame" x="109" y="123" width="77" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LZk-gu-AsI">
-                    <rect key="frame" x="194" y="44" width="200" height="124"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LZk-gu-AsI">
+                    <rect key="frame" x="187" y="54" width="207" height="126"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d67-gD-dQZ">
-                    <rect key="frame" x="109" y="62" width="85" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d67-gD-dQZ" userLabel="lat">
+                    <rect key="frame" x="20" y="90" width="159" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="io5-J3-UX5">
+                    <rect key="frame" x="20" y="118.5" width="159" height="20"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -56,7 +32,29 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="LZk-gu-AsI" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="6Jo-Ht-jhu"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="LZk-gu-AsI" secondAttribute="trailing" constant="20" id="6fh-RD-ix7"/>
+                <constraint firstItem="d67-gD-dQZ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="46" id="6ud-E0-ghT"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="LZk-gu-AsI" secondAttribute="bottom" constant="20" id="Bxz-M9-0NN"/>
+                <constraint firstItem="d67-gD-dQZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="Hpm-6F-D6t"/>
+                <constraint firstItem="d67-gD-dQZ" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.384058" id="JSk-3e-wO3"/>
+                <constraint firstItem="LZk-gu-AsI" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.63" id="M3m-45-ZhD"/>
+                <constraint firstItem="LZk-gu-AsI" firstAttribute="leading" secondItem="d67-gD-dQZ" secondAttribute="trailing" constant="8" symbolic="YES" id="QBC-Pa-1tD"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="io5-J3-UX5" secondAttribute="bottom" constant="61.5" id="Szc-9e-h9T"/>
+                <constraint firstItem="io5-J3-UX5" firstAttribute="top" secondItem="d67-gD-dQZ" secondAttribute="bottom" constant="8" symbolic="YES" id="TsD-8e-mIc"/>
+                <constraint firstItem="io5-J3-UX5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="Ykt-eM-stU"/>
+                <constraint firstItem="io5-J3-UX5" firstAttribute="top" secondItem="d67-gD-dQZ" secondAttribute="bottom" constant="8" symbolic="YES" id="dd9-bQ-9Jj"/>
+                <constraint firstItem="LZk-gu-AsI" firstAttribute="leading" secondItem="d67-gD-dQZ" secondAttribute="trailing" constant="8" symbolic="YES" id="n1d-5f-OjN"/>
+                <constraint firstItem="io5-J3-UX5" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.384058" id="zU1-Xo-svQ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="io5-J3-UX5" secondAttribute="trailing" constant="235" id="zvV-AK-Gcd"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="imageView" destination="LZk-gu-AsI" id="36r-GZ-jPg"/>
+                <outlet property="latLabel" destination="d67-gD-dQZ" id="pU2-9M-OW6"/>
+                <outlet property="lonLabel" destination="io5-J3-UX5" id="Qwa-1e-u1R"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="15.401785714285714"/>
         </view>
     </objects>
