--- a/Exam/Base.lproj/Main.storyboard
+++ b/Exam/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Tb-lk-xUO">
-                                <rect key="frame" x="0.0" y="88" width="414" height="450"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="650"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="lOU-mf-cCT">
@@ -127,7 +127,7 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XaA-mz-lH0" userLabel="LocationLabel">
-                                <rect key="frame" x="0.0" y="782.5" width="386" height="20.5"/>
+                                <rect key="frame" x="0.0" y="782.5" width="384" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemBackgroundColor"/>
                                 <nil key="highlightedColor"/>
@@ -136,13 +136,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="7Tb-lk-xUO" secondAttribute="trailing" id="176-2E-Fwa"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XaA-mz-lH0" secondAttribute="bottom" constant="10" id="OSV-NJ-HWa"/>
-                            <constraint firstItem="XaA-mz-lH0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PcA-jE-Ywd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XaA-mz-lH0" secondAttribute="trailing" constant="28" id="RHf-Kp-IAt"/>
-                            <constraint firstAttribute="bottom" secondItem="7Tb-lk-xUO" secondAttribute="bottom" constant="358" id="eK9-wz-H1Z"/>
-                            <constraint firstItem="7Tb-lk-xUO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="q6A-HT-1JQ"/>
-                            <constraint firstItem="7Tb-lk-xUO" firstAttribute="top" secondItem="wIk-D6-W3n" secondAttribute="bottom" id="sMK-fS-lfo"/>
+                            <constraint firstItem="XaA-mz-lH0" firstAttribute="top" secondItem="7Tb-lk-xUO" secondAttribute="bottom" constant="44.5" id="8pk-rD-rN8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XaA-mz-lH0" secondAttribute="bottom" constant="10" id="BFN-CX-Yn2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XaA-mz-lH0" secondAttribute="trailing" constant="30" id="HFl-mH-QbA"/>
+                            <constraint firstItem="7Tb-lk-xUO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Tch-69-h6v"/>
+                            <constraint firstItem="7Tb-lk-xUO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="g14-Kp-vHI"/>
+                            <constraint firstItem="XaA-mz-lH0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mrh-VH-fFD"/>
+                            <constraint firstItem="7Tb-lk-xUO" firstAttribute="top" secondItem="wIk-D6-W3n" secondAttribute="bottom" id="rmZ-X7-S2M"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Værmelding" id="Q59-BO-GrS"/>
