UI and layout tweeks. Looks better. Some code cleanup.

--- a/Exam/Base.lproj/Main.storyboard
+++ b/Exam/Base.lproj/Main.storyboard
@@ -43,6 +43,12 @@
                                 <rect key="frame" x="0.0" y="605" width="414" height="208"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnv-wr-Oxp">
+                                <rect key="frame" x="20" y="56" width="168" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mwe-aV-dkG"/>
                         <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
@@ -56,10 +62,14 @@
                             <constraint firstItem="Oij-MM-Mxk" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.577009" id="NTH-6G-8J8"/>
                             <constraint firstItem="eTm-ad-3GR" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="SHp-3j-JHH"/>
                             <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="eTm-ad-3GR" secondAttribute="bottom" constant="1" id="U6P-8N-rbw"/>
+                            <constraint firstItem="mwe-aV-dkG" firstAttribute="trailing" secondItem="cnv-wr-Oxp" secondAttribute="trailing" constant="226" id="V1c-vi-MMB"/>
                             <constraint firstItem="zTr-CP-ib2" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="XKt-Yl-HTm"/>
                             <constraint firstItem="zTr-CP-ib2" firstAttribute="bottom" secondItem="mwe-aV-dkG" secondAttribute="bottom" id="bis-q4-m6y"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="cnv-wr-Oxp" secondAttribute="bottom" constant="12" id="fmw-8Z-xNi"/>
                             <constraint firstItem="eTm-ad-3GR" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.0491071" id="hrx-va-uE8"/>
+                            <constraint firstItem="cnv-wr-Oxp" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" constant="20" id="ksW-U7-Tce"/>
                             <constraint firstItem="Oij-MM-Mxk" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="mPL-bG-VTu"/>
+                            <constraint firstItem="cnv-wr-Oxp" firstAttribute="top" secondItem="mwe-aV-dkG" secondAttribute="top" constant="12" id="sOx-q5-B6u"/>
                             <constraint firstItem="zTr-CP-ib2" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.232143" id="vix-Mm-3Hr"/>
                         </constraints>
                     </view>
@@ -67,6 +77,7 @@
                     <connections>
                         <outlet property="customViewContainer" destination="zTr-CP-ib2" id="c8l-y0-xGp"/>
                         <outlet property="mapView" destination="Oij-MM-Mxk" id="kUZ-Y7-FyJ"/>
+                        <outlet property="navLabel" destination="cnv-wr-Oxp" id="mCR-II-iwj"/>
                         <outlet property="switchToggle" destination="d1N-cU-Cvh" id="zRf-ZL-epO"/>
                     </connections>
                 </viewController>
