--- a/Exam/WeatherTableViewCell.xib
+++ b/Exam/WeatherTableViewCell.xib
@@ -17,66 +17,68 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eYN-dA-tZJ">
-                        <rect key="frame" x="188" y="30" width="116" height="41"/>
+                        <rect key="frame" x="77" y="71" width="147" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="When" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9f-Gr-1Gn">
-                        <rect key="frame" x="16" y="5" width="44.5" height="20"/>
+                        <rect key="frame" x="9" y="6" width="156" height="21"/>
                         <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="1"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rain?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIG-76-neF">
-                        <rect key="frame" x="188" y="68" width="37" height="21"/>
+                        <rect key="frame" x="232" y="71" width="37" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xLn-Yi-rWX">
-                        <rect key="frame" x="188" y="0.0" width="42" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="rUnit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ef-54-4uJ">
+                        <rect key="frame" x="275" y="71" width="38" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rUnit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ef-54-4uJ">
-                        <rect key="frame" x="237" y="68" width="38" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQs-iX-hmE">
+                        <rect key="frame" x="9" y="43" width="110" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tUnit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="W6I-Zk-8Gm">
-                        <rect key="frame" x="238" y="5" width="77" height="21"/>
+                        <rect key="frame" x="263" y="43" width="63" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQs-iX-hmE">
-                        <rect key="frame" x="16" y="40" width="134" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xLn-Yi-rWX">
+                        <rect key="frame" x="227" y="46" width="42" height="15"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="jIG-76-neF" secondAttribute="bottom" constant="11" id="9ld-FI-EcC"/>
-                    <constraint firstItem="W6I-Zk-8Gm" firstAttribute="centerY" secondItem="X9f-Gr-1Gn" secondAttribute="centerY" id="Kw6-m7-M2h"/>
-                    <constraint firstAttribute="trailing" secondItem="jIG-76-neF" secondAttribute="trailing" constant="95" id="RxD-aa-kVg"/>
-                    <constraint firstItem="8Ef-54-4uJ" firstAttribute="top" secondItem="W6I-Zk-8Gm" secondAttribute="bottom" constant="42" id="YaM-VL-PuG"/>
-                    <constraint firstItem="8Ef-54-4uJ" firstAttribute="leading" secondItem="jIG-76-neF" secondAttribute="trailing" constant="12" id="arv-Eq-Lsc"/>
-                    <constraint firstAttribute="bottom" secondItem="bQs-iX-hmE" secondAttribute="bottom" constant="40" id="dGx-Zf-Nyb"/>
-                    <constraint firstItem="X9f-Gr-1Gn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ezR-Zj-8La"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="8Ef-54-4uJ" secondAttribute="trailing" constant="29" id="iCj-tG-LA8"/>
-                    <constraint firstItem="X9f-Gr-1Gn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="j5S-BG-g09"/>
-                    <constraint firstItem="8Ef-54-4uJ" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="jJE-37-Z5V"/>
-                    <constraint firstItem="bQs-iX-hmE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="kwM-tx-jeh"/>
-                    <constraint firstItem="xLn-Yi-rWX" firstAttribute="centerY" secondItem="X9f-Gr-1Gn" secondAttribute="centerY" id="pbo-FB-ftH"/>
-                    <constraint firstItem="eYN-dA-tZJ" firstAttribute="centerY" secondItem="bQs-iX-hmE" secondAttribute="centerY" id="tWt-Cv-aby"/>
+                    <constraint firstItem="8Ef-54-4uJ" firstAttribute="leading" secondItem="jIG-76-neF" secondAttribute="trailing" constant="6" id="4ix-Iv-QPV"/>
+                    <constraint firstItem="jIG-76-neF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="71" id="AkV-JQ-QGm"/>
+                    <constraint firstItem="jIG-76-neF" firstAttribute="leading" secondItem="eYN-dA-tZJ" secondAttribute="trailing" constant="8" symbolic="YES" id="Jju-2g-au3"/>
+                    <constraint firstItem="xLn-Yi-rWX" firstAttribute="leading" secondItem="bQs-iX-hmE" secondAttribute="trailing" constant="108" id="MfT-Zo-0DY"/>
+                    <constraint firstAttribute="trailing" secondItem="X9f-Gr-1Gn" secondAttribute="trailing" constant="155" id="Smt-0L-ljv"/>
+                    <constraint firstItem="xLn-Yi-rWX" firstAttribute="top" secondItem="X9f-Gr-1Gn" secondAttribute="bottom" constant="19" id="TvM-cL-MGK"/>
+                    <constraint firstAttribute="bottom" secondItem="bQs-iX-hmE" secondAttribute="bottom" constant="37" id="U4j-6j-sQP"/>
+                    <constraint firstItem="8Ef-54-4uJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="71" id="Vvr-e6-FBL"/>
+                    <constraint firstItem="X9f-Gr-1Gn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="ZqC-R3-Dwo"/>
+                    <constraint firstAttribute="trailing" secondItem="8Ef-54-4uJ" secondAttribute="trailing" constant="7" id="bNs-LX-1fQ"/>
+                    <constraint firstItem="bQs-iX-hmE" firstAttribute="top" secondItem="X9f-Gr-1Gn" secondAttribute="bottom" constant="16" id="eP4-wD-h53"/>
+                    <constraint firstItem="X9f-Gr-1Gn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="eZW-76-Wqw"/>
+                    <constraint firstAttribute="bottom" secondItem="jIG-76-neF" secondAttribute="bottom" constant="8" id="pns-lj-1Zb"/>
+                    <constraint firstItem="bQs-iX-hmE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="sEV-ss-3Vd"/>
+                    <constraint firstAttribute="bottom" secondItem="8Ef-54-4uJ" secondAttribute="bottom" constant="8" id="voX-bA-JD8"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
