should be about done. No more time left

--- a/Exam/View/Base.lproj/Main.storyboard
+++ b/Exam/View/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Hjem-->
         <scene sceneID="QzU-fo-xWq">
             <objects>
-                <viewController id="Ylf-ny-yJn" customClass="HomeForecastController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Hjem" id="Ylf-ny-yJn" customClass="HomeForecastController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rZj-mT-8zG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -68,7 +68,7 @@
                                 </constraints>
                             </view>
                             <navigationBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Hih-Uj-lbc">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="44" width="453" height="44"/>
                                 <items>
                                     <navigationItem title="Hjem" id="6Wa-fH-aym"/>
                                 </items>
@@ -131,6 +131,12 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnv-wr-Oxp">
+                                <rect key="frame" x="20" y="44" width="168" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Oij-MM-Mxk">
                                 <rect key="frame" x="0.0" y="89" width="414" height="517"/>
                                 <gestureRecognizers/>
@@ -142,12 +148,6 @@
                                 <rect key="frame" x="0.0" y="605" width="414" height="208"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnv-wr-Oxp">
-                                <rect key="frame" x="20" y="56" width="168" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mwe-aV-dkG"/>
                         <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
@@ -164,11 +164,11 @@
                             <constraint firstItem="mwe-aV-dkG" firstAttribute="trailing" secondItem="cnv-wr-Oxp" secondAttribute="trailing" constant="226" id="V1c-vi-MMB"/>
                             <constraint firstItem="zTr-CP-ib2" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" id="XKt-Yl-HTm"/>
                             <constraint firstItem="zTr-CP-ib2" firstAttribute="bottom" secondItem="mwe-aV-dkG" secondAttribute="bottom" id="bis-q4-m6y"/>
-                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="cnv-wr-Oxp" secondAttribute="bottom" constant="12" id="fmw-8Z-xNi"/>
+                            <constraint firstItem="Oij-MM-Mxk" firstAttribute="top" secondItem="cnv-wr-Oxp" secondAttribute="bottom" constant="1" id="fmw-8Z-xNi"/>
                             <constraint firstItem="eTm-ad-3GR" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.0491071" id="hrx-va-uE8"/>
                             <constraint firstItem="cnv-wr-Oxp" firstAttribute="leading" secondItem="mwe-aV-dkG" secondAttribute="leading" constant="20" id="ksW-U7-Tce"/>
                             <constraint firstItem="Oij-MM-Mxk" firstAttribute="trailing" secondItem="mwe-aV-dkG" secondAttribute="trailing" id="mPL-bG-VTu"/>
-                            <constraint firstItem="cnv-wr-Oxp" firstAttribute="top" secondItem="mwe-aV-dkG" secondAttribute="top" constant="12" id="sOx-q5-B6u"/>
+                            <constraint firstItem="cnv-wr-Oxp" firstAttribute="top" secondItem="mwe-aV-dkG" secondAttribute="top" id="sOx-q5-B6u"/>
                             <constraint firstItem="zTr-CP-ib2" firstAttribute="height" secondItem="TBE-l3-ZOf" secondAttribute="height" multiplier="0.232143" id="vix-Mm-3Hr"/>
                         </constraints>
                     </view>
@@ -192,7 +192,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Ewy-7B-jWf">
             <objects>
-                <tabBarController id="CNs-T7-9wz" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" id="CNs-T7-9wz" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="E02-wo-frR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
