--- a/Exam/Base.lproj/LaunchScreen.storyboard
+++ b/Exam/Base.lproj/LaunchScreen.storyboard
@@ -11,22 +11,47 @@
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
-                <viewController modalTransitionStyle="crossDissolve" id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LaunchController" modalTransitionStyle="crossDissolve" id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="paraply" translatesAutoresizingMaskIntoConstraints="NO" id="kPO-e8-kUq">
+                                <rect key="frame" x="95" y="352" width="225" height="192"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Dl9-y4-E7T">
+                                <rect key="frame" x="170" y="182" width="74" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="kPO-e8-kUq" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.214286" id="7dM-ko-yMN"/>
+                            <constraint firstItem="kPO-e8-kUq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="95" id="CA4-DA-8Ay"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kPO-e8-kUq" secondAttribute="bottom" constant="318" id="CAu-Vd-Yjz"/>
+                            <constraint firstItem="Dl9-y4-E7T" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="170" id="MX5-eV-j5z"/>
+                            <constraint firstItem="Dl9-y4-E7T" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="138" id="Pgr-CF-dYt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dl9-y4-E7T" secondAttribute="trailing" constant="170" id="Tjb-Px-uGG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kPO-e8-kUq" secondAttribute="trailing" constant="94" id="o5U-Kd-HpG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="indicator" destination="Dl9-y4-E7T" id="i7D-Ab-Y5W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="50.724637681159422" y="374.33035714285711"/>
         </scene>
     </scenes>
     <resources>
+        <image name="paraply" width="700" height="700"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
